css to portfolio

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@
 
 body {
   font-family: Roboto, sans-serif;
-  background-color: #e5e5e5;
+  background-color: var(--white-background-color);
 }
 
 .link {
@@ -26,7 +26,9 @@ body {
   list-style: none;
 }
 
-.logo-text1 {
+/* ----------------------------HEADER-------------------------------------- */
+
+.header-logo-text1 {
   width: 44px;
   height: 21px;
   font-family: "Raleway", sans-serif;
@@ -41,7 +43,7 @@ body {
   color: var(--primary-brand-color);
 }
 
-.logo-text2 {
+.header-logo-text2 {
   width: 71px;
   height: 21px;
   font-family: "Raleway", sans-serif;
@@ -54,11 +56,6 @@ body {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--dark-color);
-}
-/* ----------------------------HEADER-------------------------------------- */
-
-.header {
-  background-color: var(--white-background-color);
 }
 
 .header-item {
@@ -160,9 +157,82 @@ body {
 
 /* ----------------------------FOOTER-------------------------------------- */
 
+.footer {
+  background-color: var(--dark-color);
+}
 .footer-text {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--light-color);
+}
+
+.footer-logo-text1 {
+  font-family: "Raleway", sans-serif;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.17;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--primary-brand-color);
+}
+
+.footer-logo-text2 {
+  font-family: "Raleway", sans-serif;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.17;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--light-color);
+}
+
+/* ----------------------------PORTFOLIO-------------------------------------- */
+
+/* ----------------------------FILTERS-------------------------------------- */
+
+.filters-btn {
+  width: 116px;
+  height: 48px;
+  background-color: var(--light-color);
+  border: 1px solid #e7e9fc;
+  border-radius: 4px;
+  font-family: inherit;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.04em;
+  color: var(--primary-brand-color);
+}
+.filters-btn:is(:hover, :focus) {
+  background-color: var(--pressed-state-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+  color: var(--white-background-color);
+}
+
+/* ----------------------------PROJECTS-------------------------------------- */
+
+.projects-top-text {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: var(--modal-overlay-color);
+}
+
+.projects-bottom-text {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--text-color);
 }
